--- a/15/recipes.yaml
+++ b/15/recipes.yaml
@@ -79,9 +79,10 @@ links:
                             vals:
                                 type: string
                         key:
-                            desc: All keys used for this shaped crafting recipe.
+                            desc: All single-character keys used for this shaped crafting recipe.
                             type: object
                             extra:
+                                title: Character
                                 nopanel: true
                                 id: recipes-15
                                 extend: oritem
@@ -120,6 +121,7 @@ links:
                                 desc: All keys used for this shaped crafting recipe.
                                 type: object
                                 extra:
+                                    title: Character
                                     nopanel: true
                                     id: recipes-15
                                     extend: oritem
