--- a/10/advancements.yaml
+++ b/10/advancements.yaml
@@ -99,13 +99,15 @@ links:
                         allow: '*a-z0-9_\/:.-'
 type: or
 or:
-  - type: object
+  - title: simple
+    type: object
     extend: advancement_base
     props:
         criteria:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
+                title: Criteria ID
                 type: object
                 props:
                     trigger:
@@ -318,6 +320,7 @@ or:
                                         effects:
                                             type: object
                                             extra:
+                                                title: Effect ID
                                                 type: object
                                                 props:
                                                     amplifier:
@@ -362,9 +365,10 @@ or:
                                             type: string
                                             allow: '*a-z0-9_\/:.-'
                                         state:
-                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
+                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
                                             type: object
                                             extra:
+                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -640,9 +644,10 @@ or:
                                             id: predicates-10
                                             link: location_pred
                                         state:
-                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
+                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
                                             type: object
                                             extra:
+                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -935,7 +940,7 @@ or:
                                             desc: The origin that was chosen.
                                             type: string
                                             allow: '*a-z0-9_\/:.-'
-  - name: custom
+  - title: custom
     type: object
     extend: advancement_base
     props:
@@ -943,6 +948,7 @@ or:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
+                title: Criteria ID
                 type: object
                 props:
                     trigger:
