--- a/12/advancements.yaml
+++ b/12/advancements.yaml
@@ -107,6 +107,7 @@ or:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
+                title: Criteria ID
                 type: object
                 props:
                     trigger:
@@ -319,6 +320,7 @@ or:
                                         effects:
                                             type: object
                                             extra:
+                                                title: Effect ID
                                                 type: object
                                                 props:
                                                     amplifier:
@@ -363,9 +365,10 @@ or:
                                             type: string
                                             allow: '*a-z0-9_\/:.-'
                                         state:
-                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
+                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
                                             type: object
                                             extra:
+                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -641,9 +644,10 @@ or:
                                             id: predicates-12
                                             link: location_pred
                                         state:
-                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
+                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
                                             type: object
                                             extra:
+                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -943,6 +947,7 @@ or:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
+                title: Criteria ID
                 type: object
                 props:
                     trigger:
