--- a/15/predicates.yaml
+++ b/15/predicates.yaml
@@ -52,6 +52,7 @@ links:
                         desc: A map of block property names to values. Test will fail if the block doesn't match.
                         type: object
                         extra:
+                            title: Property
                             or:
                               - type: boolean
                                 default: false
@@ -83,6 +84,7 @@ links:
                         desc: A map of fluid property names to values. Test will fail if the fluid doesn't match.
                         type: object
                         extra:
+                            title: Property
                             or:
                               - type: boolean
                                 default: false
@@ -139,6 +141,7 @@ links:
                 href: https://minecraft.wiki/w/Java_Edition_data_values/Effects
                 type: object
                 extra:
+                    title: Effect ID
                     type: object
                     amplifier:
                         desc: The effect amplifier.
@@ -213,11 +216,13 @@ links:
                         desc: A map of advancements to check. The keys are advancement IDs.
                         type: object
                         extra:
+                            title: Advancement ID
                             or:
                               - type: boolean
                                 default: false
                               - type: object
                                 extra:
+                                    title: Criteria ID
                                     type: boolean
                                     default: false
                         allow: '*a-z0-9#\/:.-'
@@ -231,6 +236,7 @@ links:
                         desc: A map of recipes to check. The keys are recipe IDs. Each should be true if that recipe should be known to the player.
                         type: object
                         extra:
+                            title: Recipe ID
                             type: boolean
                             default: false
                         allow: '*a-z0-9#\/:.-'
@@ -608,6 +614,7 @@ links:
                             type: object
                             desc: (Optional) A map of block property names to values. All values are strings. The test fails if the block doesn't match.
                             extra:
+                                title: Property
                                 type: string
                             allow: '*a-z0-9#\/:.-'
                     string-minecraft:damage_source_properties:
@@ -629,6 +636,7 @@ links:
                             desc: Scores to check. All specified scores must pass for the condition to pass. Key name is the objective while the value is the exact score value or range of score values required for the condition to pass.
                             type: object
                             extra:
+                                title: Objective
                                 link: intmm
                     string-minecraft:inverted:
                         term:
