--- a/6/powers.yaml
+++ b/6/powers.yaml
@@ -2097,7 +2097,9 @@ links:
                 desc: ID of the desired Power Type.
                 const: origins:multiple
         extra:
+            title: Subpower ID
             nopanel: true
+            allow: '*a-z0-9_#\/:.-'
             or:
               - link: power_base
               - link: custom_power_base
