--- a/7/powers.yaml
+++ b/7/powers.yaml
@@ -2905,6 +2905,7 @@ links:
                 desc: ID of the desired Power Type.
                 const: origins:multiple
         extra:
+            title: Subpower ID
             nopanel: true
             or:
               - link: power_base
