Revert "Add titles to named lists"
This reverts commit d6c38b1f22770317bbaaa8cd23bb9989ea4df1d0.

--- a/10/advancements.yaml
+++ b/10/advancements.yaml
@@ -99,15 +99,13 @@ links:
                         allow: '*a-z0-9_\/:.-'
 type: or
 or:
-  - title: simple
-    type: object
+  - type: object
     extend: advancement_base
     props:
         criteria:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
-                title: Criteria ID
                 type: object
                 props:
                     trigger:
@@ -320,7 +318,6 @@ or:
                                         effects:
                                             type: object
                                             extra:
-                                                title: Effect ID
                                                 type: object
                                                 props:
                                                     amplifier:
@@ -365,10 +362,9 @@ or:
                                             type: string
                                             allow: '*a-z0-9_\/:.-'
                                         state:
-                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
+                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
                                             type: object
                                             extra:
-                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -644,10 +640,9 @@ or:
                                             id: predicates-10
                                             link: location_pred
                                         state:
-                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
+                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
                                             type: object
                                             extra:
-                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -940,7 +935,7 @@ or:
                                             desc: The origin that was chosen.
                                             type: string
                                             allow: '*a-z0-9_\/:.-'
-  - title: custom
+  - name: custom
     type: object
     extend: advancement_base
     props:
@@ -948,7 +943,6 @@ or:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
-                title: Criteria ID
                 type: object
                 props:
                     trigger:
