--- a/6/recipes.yaml
+++ b/6/recipes.yaml
@@ -78,10 +78,9 @@ links:
                             vals:
                                 type: string
                         key:
-                            desc: All single-character keys used for this shaped crafting recipe.
+                            desc: All keys used for this shaped crafting recipe.
                             type: object
                             extra:
-                                title: Character
                                 nopanel: true
                                 id: recipes-6
                                 extend: oritem
@@ -117,10 +116,9 @@ links:
                                 vals:
                                     type: string
                             key:
-                                desc: All single-character keys used for this shaped crafting recipe.
+                                desc: All keys used for this shaped crafting recipe.
                                 type: object
                                 extra:
-                                    title: Character
                                     nopanel: true
                                     id: recipes-6
                                     extend: oritem
