--- a/7/advancements.yaml
+++ b/7/advancements.yaml
@@ -71,7 +71,6 @@ props:
         desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
         type: object
         extra:
-            title: Criteria ID
             type: object
             props:
                 trigger:
@@ -253,7 +252,6 @@ props:
                                     effects:
                                         type: object
                                         extra:
-                                            title: Effect ID
                                             type: object
                                             props:
                                                 amplifier:
@@ -298,10 +296,9 @@ props:
                                         type: string
                                         allow: '*a-z0-9_\/:.-'
                                     state:
-                                        desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
+                                        desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
                                         type: object
                                         extra:
-                                            title: Property
                                             type: string
                                     player:
                                         desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -546,10 +543,9 @@ props:
                                         id: predicates-7
                                         link: location_pred
                                     state:
-                                        desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
+                                        desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
                                         type: object
                                         extra:
-                                            title: Property
                                             type: string
                                     player:
                                         desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
