--- a/15/advancements.yaml
+++ b/15/advancements.yaml
@@ -107,7 +107,6 @@ or:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
-                title: Criteria ID
                 type: object
                 props:
                     trigger:
@@ -314,7 +313,6 @@ or:
                                         effects:
                                             type: object
                                             extra:
-                                                title: Effect ID
                                                 type: object
                                                 props:
                                                     amplifier:
@@ -359,10 +357,9 @@ or:
                                             type: string
                                             allow: '*a-z0-9_\/:.-'
                                         state:
-                                            desc: The block state of the block, with the key names being the property names and the values being the required values for those properties.
+                                            desc: The block states of the block, with the key names being the state names and the values being the required values for those states.
                                             type: object
                                             extra:
-                                                title: Property
                                                 type: string
                                         player:
                                             desc: The player that would get the advancement. May also be a list of predicates that must pass in order for the trigger to activate.
@@ -933,7 +930,6 @@ or:
             desc: A criteria map to be used by "requirements". If "requirements" is not specified, then all of these criteria need to be met.
             type: object
             extra:
-                title: Criteria ID
                 type: object
                 props:
                     trigger:
