--- a/10/powers.yaml
+++ b/10/powers.yaml
@@ -3124,17 +3124,20 @@ links:
                             desc: When this is false, the entity_action_chosen will not be executed when the player changes their origin with an orb, but only when the player chooses an origin for the first time or their origin was reset to origins:empty via a command.
                             type: boolean
                             default: true
+                        entity_action_gained:
+                            desc: If specified, this action will be executed on the player when the power is added to the entity for the first time.
+                            link: entity_action
                         entity_action_lost:
-                            desc: If set, this action will be executed on the player when the power is lost.
+                            desc: If specified, this action will be executed on the player when the power is removed from the entity permanently.
                             link: entity_action
                         entity_action_added:
-                            desc: If set, this action will be executed on the player when the power is added. Joining a world adds each power back.
+                            desc: If specified, this action will be executed on the player when the power is added to the entity. Joining a world adds each power back.
                             link: entity_action
                         entity_action_removed:
-                            desc: If set, this action will be executed on the player when the power is removed and right after the player respawns. Leaving a world removes each power.
+                            desc: If specified, this action will be executed on the player when the power is removed from the entity and right after the player respawns. Leaving a world removes each power.
                             link: entity_action
                         entity_action_respawned:
-                            desc: If set, this action will be executed on the player right after the player respawns, after the entity_action_removed.
+                            desc: If specified, this action will be executed on the player right after the player respawns. This action will be executed after the action in entity_action_removed.
                             link: entity_action
                     string-origins:action_on_entity_use:
                         bientity_action:
